


export interface NaviMenu_I{
    getNaviHTMLDiv():HTMLDivElement

}