


export interface TABApplication{
    setText(arg0: string): void
    getText(): string
}