@startuml




class View.FileDiv {
    ApplicationAdapterController
}
class View.DirectoryDiv {
    ApplicationAdapterController
    void rename(string text)
    void remove()
    void createNewFolder()
}

class View.FileExplorerDiv {
}



class DomainViewI.EditorControlerAdapter_EXC_I {

}


class View.TabManager.TabManger{
File
Application
}

class View.EditApplication{
data
}

class View.PrintApplication{
data
}

class View.TabManager.TabCreator{
file
}

class View.StorageDiv{
}

class View.ContextMenu{
}

class View.FileLeftClickMenu{

}

class View.NaviManager.NaviMenu{

}
class View.NaviManager.NaviPage{

}
class View.NaviManager.NaviPageContent{

}

interface View.BaseTableManager_I{    
}

class View.BaseTableManager{    
}

interface View.NaviMenu_I{    
}

interface View.TabManager.TabApplication{    
}

interface Application.ApplicationCreator_I{}

View.NaviManager.NaviPage ---> View.NaviManager.NaviPageContent : use
View.NaviManager.NaviPage ---> View.NaviManager.NaviMenu : use
View.NaviManager.NaviMenu ---> View.NaviManager.NaviMenu_I : use
View.NaviManager.NaviMenu ---> View.BaseTableManager_I : use

Application.ApplicationCreator_I --> View.TabManager.TabApplication : use

View.TabManager.TabCreator  --> Application.ApplicationCreator_I : use
View.TabManager.TabCreator  -> View.TabManager.TabApplication : use
View.TabManager.TabCreator  -> View.TabManager.TabManger : use
View.TabManager.TabCreator  --> DomainViewI.EditorControlerAdapter_EXC_I : use
View.TabManager.TabCreator  ---> View.FileDiv : use
View.TabManager.TabCreator  -> View.TabManager.TABpage : use



View.TabManager.TabManger --> Application.ApplicationCreator_I : use
View.TabManager.TabManger ---> View.FileDiv : use
View.TabManager.TabManger -> View.TabManager.TabCreator : use
View.TabManager.TabManger -> View.TabManager.TabManager_I : implements
View.TabManager.TabManger -> View.TabManager.TAB : implements

View.TabManager.TAB --> technical.Observer : use
View.TabManager.TAB ---> View.FileDiv : use
View.TabManager.TAB -> Application.ApplicationCreator_I : use
View.TabManager.TAB -> View.TabManager.TABpage : use

View.TabManager.TABpage --> View.TabManager.TabApplication : use

View.BaseTableManager -|> View.BaseTableManager_I : impenets


View.ContextMenu -> View.StorageDiv : use

View.DirectoryDiv --> DomainViewI.DirectoryNode_EXC_I : use
View.DirectoryDiv --> DomainViewI.EditorControlerAdapter_EXC_I  : use
View.DirectoryDiv -> View.TabManager.TabCreator : use
View.DirectoryDiv --> View.ContextMenu : use
View.DirectoryDiv -> View.FileDiv : use
View.DirectoryDiv  --|> View.StorageDiv : exdend

View.FileDiv  --> DomainViewI.EditorControlerAdapter_EXC_I  : use
View.FileDiv  ---> DomainViewI.FileNode_EXC_I : use
View.FileDiv  -->  View.ContextMenu : use
View.FileDiv  --> View.FileLeftClickMenu : use
View.FileDiv  --|> View.StorageDiv : exdend
View.FileDiv  -->  View.TabManager.TabCreator : use
View.FileDiv  --> Application.ApplicationCreator_I  : use



View.FileExplorerDiv ---> DomainViewI.DirectoryNode_EXC_I : use
View.FileExplorerDiv --> DomainViewI.EditorControlerAdapter_EXC_I : use
View.FileExplorerDiv ---> DomainViewI.FileNode_EXC_I : use
View.FileExplorerDiv -> View.DirectoryDiv : use
View.FileExplorerDiv --> View.FileDiv : use
View.FileExplorerDiv --> View.StorageDiv : use
View.FileExplorerDiv --> View.TabManager.TabManager_I : use
View.FileExplorerDiv <|-- View.FileManager_I : implements
View.FileExplorerDiv <|-- View.NaviManager.NaviMenu_I : implements


View.StorageDiv --> DomainViewI.EditorControlerAdapter_EXC_I  : use
View.StorageDiv ---> DomainViewI.StorageNode2_EXC_I : use
View.StorageDiv -> technical.Observer : use


View.FileLeftClickMenu -> View.FileDiv : use
View.FileLeftClickMenu -> Application.ApplicationCreator_I : use


